--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,13 @@ dependencies:
   cloud_firestore: ^3.1.17
   firebase_auth: ^3.3.19
   firebase_core: ^1.17.1
+  
+  firebase_storage: ^10.2.17
+  image_picker: ^0.8.5+3
+
   fluttertoast: ^8.0.9
   google_fonts: ^3.0.1
+
 
 dev_dependencies:
   flutter_test:
