--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cloud_firestore: ^3.1.17
   firebase_auth: ^3.3.19
   firebase_core: ^1.17.1
-  
+
   firebase_storage: ^10.2.17
   image_picker: ^0.8.5+3
 
@@ -55,6 +55,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.9.3
+
+
+flutter_icons:
+  image_path: "assets/logo.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
